# OpenIMC

./: .buildinfo  .coverage  .gitignore  LICENSE  README.md  api_cli.html  api_core.html  coverage.xml  example_workflow_config.yaml  genindex.html  index.html  installation.html  main.py  objects.inv  openimc.ui.dialogs.spillover_matrix_dialog  overview.html  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  run_tests.sh  search.html  searchindex.js  setup.py
.github/workflows/: docs-pages.yml  tests.yml
_modules/: index.html
_modules/openimc/: core.html
_sources/: api_cli.rst.txt  index.rst.txt  installation.rst.txt  quickstart.rst.txt
docs/source/: api_cli.rst  conf.py  installation.rst  overview.rst  quickstart.rst
logs/: methods_log.jsonl
openimc/: __init__.py  __main__.py  cli.py  core.py
openimc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
openimc/data/: mcd_loader.py  ometiff_loader.py
openimc/processing/: batch_correction.py  deconvolution_worker.py  export_worker.py  feature_worker.py  ilastik_inference.py  pixel_correlation_worker.py  qc_analysis_worker.py  spatial_analysis_worker.py  spillover_correction.py  spillover_matrix.py  watershed_worker.py
openimc/ui/: __init__.py  main_window.py  mpl_canvas.py  utils.py
openimc/ui/dialogs/: advanced_spatial_analysis.py  batch_correction_dialog.py  clustering.py  comparison_dialog.py  custom_grouping_dialog.py  deconvolution_dialog.py  display_settings_dialog.py  export.py  feature_extraction.py  feature_selector_dialog.py  figure_save_dialog.py  gpu_selection_dialog.py  ilastik_segmentation_dialog.py  ometiff_format_dialog.py  pixel_correlation_dialog.py  plot_config_dialog.py  preprocessing_dialog.py  progress_dialog.py  qc_analysis_dialog.py  segmentation_dialog.py  simple_spatial_analysis.py  spatial_analysis.py  spillover_correction_dialog.py  spillover_matrix_dialog.py
openimc/utils/: __init__.py  logger.py
openmcd/processing/: feature_worker.py  interactive_pixel_classifier.py  interactive_pixel_features.py  interactive_pixel_inference.py  interactive_pixel_instances.py  watershed_worker.py
openmcd/ui/: main_window.py
openmcd/ui/dialogs/: clustering.py  interactive_pixel_classification_dialog.py  segmentation_dialog.py  spatial_analysis.py
tests/: __init__.py  conftest.py  tests_README.md
tests/data/mask/: Patient1_pos1_1.ome_Patient1_pos1_1_segmentation.tiff
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_cli_workflow.py
tests/unit/: __init__.py  test_cli.py  test_core.py  test_data_loaders.py  test_denoising.py  test_feature_extraction.py  test_normalization.py  test_watershed.py
