[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openimc"
version = "0.1.0"
description = "OpenIMC - Open-source Imaging Mass Cytometry analysis platform"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "See LICENSE file"}
authors = [
    {name = "OpenIMC Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

# Core dependencies
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13.2",
    "pillow",
    "tifffile>=2021.7.2",
    "scipy",
    "statsmodels>=0.14.0",
    "h5py",
    "lxml",
    "imageio",
    "PyQt5>=5.15",
    "readimc>=0.9.0",
    "cellpose==3.1.1.2",
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "scikit-image>=0.25.0",
    "scikit-learn>=1.0.0",
    "psutil>=5.8.0",
    "leidenalg>=0.10.0",
    "python-igraph>=0.11.0",
    "umap-learn>=0.5.0",
    "hdbscan>=0.8.0",
    "openai>=1.42.0",
    "combat>=0.1.0",
    "harmonypy>=0.0.9",
]

# Optional dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-qt>=4.2.0",
]
cellsam = [
    "cellSAM @ git+https://github.com/vanvalenlab/cellSAM.git",
]

[project.scripts]
openimc = "openimc.cli:main"

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=openimc",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "-ra",
]
markers = [
    "unit: Unit tests for individual functions",
    "integration: Integration tests for workflows",
    "slow: Tests that take a long time to run",
    "regression: Regression tests that compare against known outputs",
    "requires_gpu: Tests that require GPU",
    "requires_cellpose: Tests that require Cellpose",
    "requires_cellsam: Tests that require CellSAM",
    "requires_readimc: Tests that require readimc library",
    "ui: Tests that require UI/Qt",
    "data: Tests that require test data files",
]

# Coverage configuration
[tool.coverage.run]
source = ["openimc"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

